fix: last spacing adjustment

--- a/src/components/reusable/blockCodeView/blockCodeView.scss
+++ b/src/components/reusable/blockCodeView/blockCodeView.scss
@@ -20,7 +20,7 @@ pre.line-numbers {
     position: relative;
     display: block;
     white-space: pre;
-    margin-left: -45px;
+    margin-left: -30px;
     margin-top: 0;
     margin-bottom: 0;
     margin-right: 0;
@@ -31,7 +31,7 @@ pre.line-numbers {
     pointer-events: none;
     top: 0;
     font-size: 100%;
-    left: -56px;
+    left: -70px;
     width: 40px;
     letter-spacing: -1px;
     border-right: 1px solid var(--kd-color-text-level-disabled);
@@ -50,7 +50,7 @@ pre.line-numbers {
         content: counter(linenumber);
         color: var(--kd-color-text-level-disabled);
         display: block;
-        padding-right: 13px;
+        padding-right: 16px;
         text-align: right;
       }
     }
